--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
-  },
+"dependencies": {
+  "react": "^19.2.0",
+  "react-dom": "^19.2.0",
+  "vite": "^7.2.4",
+  "@vitejs/plugin-react": "^5.1.1"
+},
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
